syntax = "proto3";

option java_multiple_files = true;

package com.example.grpc;

message TokenRequest {
  string token = 1;
}

message TokenResponse {
  string name = 1;
  string role = 2;
}

service TokenAuthService {
  rpc TokenAuth(TokenRequest) returns (TokenResponse);
}